--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1>WELCOME TO ZOMBIE ROAD</h1>
+  <h1>WELCOME</h1>
   <p>SIGN IN</p>
   <button onclick="signIn()">Ethereum ile Giriş Yap</button>
 
