--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       const signer = provider.getSigner()
       console.log(signer)
 
-      // Sunucuya hesap adresini göndererek imzalanması gereken mesajı alalım.
+      // Sunucuya hesap adresini göndererek imzalanması gereken mesajı al.
       const response = await fetch('/auth/ethereum/message', {
         method: 'POST',
         headers: {
